# test-tauri-wasm

./: .gitignore  README.md  package.json  pnpm-lock.yaml  rsw.toml  vite.config.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-wasm/: Cargo.toml  LICENSE_MIT
src-wasm/app/: Cargo.toml  README.md
src-wasm/app/src/: lib.rs
src-wasm/core/: Cargo.toml  README.md
src-wasm/core/src/: lib.rs
src-wasm/src/: lib.rs
src-wasm/window/: Cargo.toml  README.md
src/components/: ButtonGroup.tsx  TauriListItem.tsx  item.module.css
src/constant/: Menu.ts  constants.tsx
src/layouts/MainLayout/: MainLayout.module.css  index.tsx
src/layouts/MainLayout/Footer/: Footer.module.css  index.tsx
src/layouts/MainLayout/Header/: Header.module.css  index.tsx
src/layouts/MainLayout/MainContent/: MainContent.module.css  index.tsx
src/layouts/MainLayout/Sidebar/: Sidebar.module.css  index.tsx
src/router/: index.tsx
src/views/: About.tsx  Help.tsx  Settings.tsx  Tauri-App.tsx
