[package]
name = "app"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri-wasm-copy={path = "../../../tauri-wasm-copy",features = ["app"]}
wasm-bindgen = {workspace = true}
wasm-bindgen-futures = {workspace = true}


