[package]
name = "src-wasm"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen ={workspace = true}
wasm-bindgen-futures = {workspace = true}
tauri-wasm-copy={workspace = true ,features = ["core"]}

